# virtool-cli

./: .deepsource.toml  .drone.yml  .gitignore  .releaserc  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  codacy-coverage-reporter.yml  publish.yml  python-app.yml  test.yml  test_ncbi.yml  virtool-cli.yml
.model/github/: labels.yml
bind-mount/: Dockerfile
callers/: call_pull-accessions.yml  call_update-accessions.yml
docker/: Dockerfile
tests/: Dockerfile  conftest.py  docker-compose.yml  paths.py  test_add.py  test_add_bulk.py  test_annotation_vfam.py  test_build.py  test_catalog.py  test_check.py  test_collapse_vfam.py  test_curate_vfam.py  test_divide.py  test_filter_vfam.py  test_group_records.py  test_index.py  test_init.py  test_markov_vfam.py  test_merge_refs.py  test_migrate.py  test_msa_vfam.py  test_ncbi_cache.py  test_ncbi_client.py  test_ncbi_model.py  test_ncbi_parser.py  test_polyprotein_vfam.py  test_repo.py  test_snapshot_cache.py  test_taxid.py  test_update.py  test_utils_ncbi.py  test_utils_reference.py  test_utils_storage.py  test_vfam_collapse.py  test_vfam_curate.py  test_vfam_filter.py  test_vfam_markov.py  vfam_paths.py  vfam_test_collapse.py  vfam_test_curate.py  (+4 more)
tests/__snapshots__/: test_add.ambr  test_add_bulk.ambr  test_build.ambr  test_group_records.ambr  test_migrate.ambr  test_ncbi_cache.ambr  test_ncbi_client.ambr  test_ncbi_model.ambr  test_repo.ambr
tests/coverage/: coverage.xml
tests/files/: reference.json  reference_v1.json  reference_with_indent.json  testing.env
tests/legacy/: test_handlers.py  test_models.py  test_repo.py  test_utils.py  test_validate.py
tests/ncbi/: test_ncbi_client.py  test_ncbi_model.py
tests/ref/: test_otu_retrieve.py  test_resources.py  test_utils.py
tests/snapshot/: test_index.py  test_models.py  test_otu_snapshot.py
tests/vfam/: fixtures.py  fixtures_vfam.py  paths.py  paths_vfam.py  test_annotation.py  test_annotation_vfam.py  test_collapse.py  test_collapse_vfam.py  test_curate.py  test_curate_vfam.py  test_filter.py  test_filter_vfam.py  test_markov.py  test_markov_vfam.py  test_msa.py  test_msa_vfam.py  test_polyprotein.py  test_polyprotein_vfam.py
throwaway/src/: meta.json
virtool_cli/: __init__.py  accessions.py  build.py  checkup.py  cli.py  divide.py  hmm.py  init.py  isolate.py  merge.py  merge_refs.py  migrate.py  options.py  ref.py  repair.py  run.py  taxid.py  update.py  utils.py  vfam.py  vfam_annotation.py  vfam_collapse.py  vfam_curate.py  vfam_filter.py  vfam_markov.py  vfam_msa.py  vfam_polyprotein.py
virtool_cli/accessions/: catalog.py  checkup.py  cli.py  evaluate.py  exclude.py  helpers.py  initialize.py  listings.py  repair.py  taxid.py  update.py
virtool_cli/add/: __init__.py  accession.py  accessions.py  add_accession_auto.py  add_accessions.py  add_otu.py  cli.py  format.py  helpers.py  otu.py  otus.py  write.py
virtool_cli/catalog/: catalog.py  checkup.py  cli.py  exclude.py  helpers.py  initialize.py  (+4 more)
(+1872 files in other folders)
