[tool.poetry]
name = "virtool-cli"
version = "2.0.0-alpha.9"
authors = [
    "Ian Boyes <igboyes@gmail.com>",
    "Jake Alexander",
    "Lilly Roberts",
    "Shelley Gao"
]
maintainers = [
    "Ian Boyes <igboyes@gmail.com>"
]
description = "CLI Tool for working with Virtool data"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1"
aiohttp = "^3.8"
arrow = "^1.1"
biopython = "^1.81"
rich = "^13.4.2"
click = "^8.1"
structlog = "^23.1"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
pytest-mock = "^3.11"
pytest-datafiles = "^3.0"
black = "^23.7"
pre-commit = "^3.3.3"

[tool.poetry.scripts]
virtool = "virtool_cli.cli:entry"

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"