[tool.poetry]
name = "virtool-cli"
version = "0.0.0"
authors = [
    "Ian Boyes <igboyes@gmail.com>",
    "Jake Alexander",
    "Lilly Roberts",
    "Shelley Gao"
]
maintainers = [
    "Ian Boyes <igboyes@gmail.com>"
]
description = "CLI Tool for working with Virtool data"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.1"
aiohttp = "^3.8"
arrow = "^1.1"
biopython = "^1.81"
click = "^8.1"
requests = "^2.31"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-datafiles = "^3.0"
pytest-mock = "^3.11"
pytest-structlog = "^0.6"
syrupy = "^4.6.0"

[tool.poetry.scripts]
virtool = "virtool_cli.cli:entry"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"