[tool.poetry]
name = "virtool-cli"
version = "0.0.0"
authors = [
    "Ian Boyes <igboyes@gmail.com>",
    "Jake Alexander",
    "Lilly Roberts",
    "Shelley Gao"
]
maintainers = [
    "Ian Boyes <igboyes@gmail.com>"
]
description = "CLI Tool for working with Virtool data"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.1"
aiohttp = "^3.8"
arrow = "^1.1"
biopython = "^1.8"
click = "^8.1"
requests = "^2.31"
pydantic = "^2.6.2"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
pytest-structlog = "^0.6"
pytest-rerunfailures = "^14.0"
syrupy = "^4.6.0"

[tool.poetry.scripts]
virtool = "virtool_cli.cli:entry"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    'ncbi: marks tests as NCBI server-dependent (deselect with `-m "not ncbi"`)'
]

[tool.ruff.lint]
select = ["ALL"]

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"